--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.3.2",
     "react-dynamic-modal": "^1.1.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-select": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
