--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "NPM_CONFIG_PRODUCTION=true react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "netlify-production": "npm run build --define process.env.NODE_ENV='production'"
   }
 }
