--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,6 +1,7 @@
 # build environment
 FROM node:9.6.1
 RUN mkdir /usr/src/app
+RUN mkdir /usr/src/app/node_modules
 WORKDIR /usr/src/app
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
