--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -6,7 +6,7 @@ RUN mkdir /usr/src/app/node_modules
 WORKDIR /usr/src/app
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
-RUN npm install -ddd
+RUN npm install -dd
 RUN npm install react-scripts@1.1.1 -g
 RUN npm install serve -g --silent
 
