--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,11 +1,11 @@
 # build environment
 FROM node:alpine
 # Make dirs
-RUN mkdir /usr/src/app
-RUN mkdir /usr/src/app/node_modules
-WORKDIR /usr/src/app
-ENV PATH /usr/src/app/node_modules/.bin:$PATH
-COPY package.json /usr/src/app/package.json
+RUN mkdir /app
+RUN mkdir /app/node_modules
+WORKDIR /app
+ENV PATH /app/node_modules/.bin:$PATH
+COPY package.json /app/package.json
 RUN npm install
 RUN npm install react-scripts@1.1.1 -g
 RUN npm install serve -g --silent
