--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -8,7 +8,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json /app/package.json
 RUN npm install
 # RUN npm install react-scripts@1.1.1 -g
-RUN npm install serve -g
+RUN sudo npm install serve -g
 
 ARG NODE_ENV=production
 ARG REACT_APP_BUTTER_CMS_TOKEN
