--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -7,6 +7,7 @@ WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json /app/package.json
 RUN npm install
+RUN npm config set unsafe-perm true
 # RUN npm install react-scripts@1.1.1 -g
 RUN sudo npm install serve -g
 
