--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -8,7 +8,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json /app/package.json
 RUN npm install
 RUN npm config set unsafe-perm true
-# RUN npm install react-scripts@1.1.1 -g
+RUN npm install react-scripts@1.1.1 -g
 RUN npm install serve -g
 
 ARG NODE_ENV=production
