--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -5,7 +5,7 @@ RUN mkdir /app
 RUN mkdir /app/node_modules
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
-COPY package.json /app/package.json
+COPY . ./
 RUN npm install
 RUN npm config set unsafe-perm true
 RUN npm install react-scripts@1.1.1 -g
